SOAP and REST endpoints for species
