# server/src/main/java/com/cezarykluczynski/stapi/server/species/mapper/SpeciesHeaderSoapMapper.java
@@ -1,0 +1,18 @@
+package com.cezarykluczynski.stapi.server.species.mapper;
+
+import com.cezarykluczynski.stapi.client.v1.soap.SpeciesHeader;
+import com.cezarykluczynski.stapi.model.species.entity.Species;
+import com.cezarykluczynski.stapi.server.configuration.MapstructConfiguration;
+import org.mapstruct.Mapper;
+import org.mapstruct.ReportingPolicy;
+
+import java.util.List;
+
+@Mapper(config = MapstructConfiguration.class, unmappedTargetPolicy = ReportingPolicy.IGNORE)
+public interface SpeciesHeaderSoapMapper {
+
+	com.cezarykluczynski.stapi.client.v1.soap.SpeciesHeader map(Species species);
+
+	List<SpeciesHeader> map(List<Species> species);
+
+}
